Development history / change log, please read from bottom up


Version 3.3.0 - xx yyy 2017
OVERVIEW:
+ add UT16E multimeter support
+ enhance HoTTAdapter support
+ enhance MC3000 & Q200 support
+ enhance VC820 & VC840 support
+ enhance History analysis to full functional beta version (pls enable in preferences)
+ enhance serial port detection for virtual serial ports

DETAILS:
- fix analog display of synchronized master record
- support UTC time formatting
- enhance GPS coordinates support (langitude / latitude)
	- formatting in degrees/minutes or decimal degrees based on unit settings in the device
- keep selected channel after opening an OSD file
- update Copyrights
- add history graphics template support (no default set of templates get delivered) 
- fix STM virtual serial port enumeration problem (Graupner MC-28)
- fix device XML migration problem with devices using USB
- simplify device XMLs to language neutral version to reduce maintenance effort
- add MDL converter functionality for MC-28/MC-26 from/to MC-32,MC-20,MX-20,MC-16

HoTTAdapter*
	- fix start time stamp using last modified of log file
Junsi iCharger (serial communication only)
	- fix problems with received strings which are not a valid status
MC3000
	- add support for Lithium-Titanate Akku (BATT TYPE: LTO) FW 1.14
UT16E multimeter
	- add support
S32, latest and greatest JLog
	- correct RPM factor
VC820, VC840
	- fix table update problem while starting new recording in table view
History analysis
	- add context menu support
		- graphics template support (no default set of templates get delivered) 
		- analyze values in detail in the measurement mode (absolute / delta)
		  - measurements table
		  - delta measurements with regression and boxplot
		- right click on a source file in the history graph / table and 
			- open it in the graphics tab for detailed analysis
			- exclude / reintegrate it in the history analysis (e.g. preflight tests)
			- delete it permanently (e.g. unintentional recordings)