@@ -5,6 +5,7 @@ Version 3.3.0 - xx yyy 2017
 OVERVIEW:
 + add UT16E multimeter support
 + enhance HoTTAdapter support
++ enhance NMEA-Adapter support
 + enhance MC3000 & Q200 support
 + enhance VC820 & VC840 support
 + enhance History analysis to full functional beta version (pls enable in preferences)
@@ -29,6 +30,8 @@ Junsi iCharger (serial communication only)
 	- fix problems with received strings which are not a valid status
 MC3000
 	- add support for Lithium-Titanate Akku (BATT TYPE: LTO) FW 1.14
+NMEA-Adapter
+	- fix NMEA-Adapter parser to handle not supported NMEA sentence at begin
 UT16E multimeter
 	- add support
 S32, latest and greatest JLog
